# esp32-s3-watch-lite

./: .dockerignore  .env.voice-gateway.example  .gitignore  CMakeLists.txt  FLASHING_GUIDE.md  POWER_SAVING.md  README.md  VOICE_GATEWAY_DOCKER.md  WATCH_LITE_GUIDE.md  docker-compose.voice-gateway.yml  partitions.csv  sdkconfig.defaults
.github/workflows/: release-firmware.yml
components/esp32_s3_touch_amoled_2_06/: esp32_s3_touch_amoled_2_06.c
components/esp32_s3_touch_amoled_2_06/include/bsp/: display.h
main/: CMakeLists.txt  display_test_main.c  minimal_watch_main.c  watch_ai_main.c  watch_ai_test_cn_24.c
tools/: find_watch_port.py  install_docker_ubuntu.sh  package_release_firmware.py  recreate_voice_gateway_docker.sh  render_watch_ui_previews.py  run_voice_gateway_docker.sh  voice_gateway.Dockerfile  voice_gateway.py  voice_gateway.requirements.txt
tools/edge_tts_proxy/: README.md  edge_tts_proxy.py  requirements.txt
tools/watch_gateway/: .gitignore  README.md  voice_guard.py  watch_gateway.py
